Update from release/v1-3bd99b37728a2e3b620835c9cf418520b1cf09c1

--- a/style.css
+++ b/style.css
@@ -155,4 +155,14 @@ p {
   display: initial;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
 /*# sourceMappingURL=style.css.map */
