--- a/style.css
+++ b/style.css
@@ -2,16 +2,15 @@
 body {
   font-family: "Fira Code", monospace;
   background: black;
-  line-height: 22px;
-  padding: 32px 32px 32px 72px;
+  line-height: 1.4rem;
+  padding: 2rem;
 }
 
 article {
-  width: 820px;
-  display: flex;
-  flex-direction: column;
-  font-size: 16px;
+  max-width: 48rem;
+  font-size: 1rem;
   color: #fdf8cb;
+  margin: auto;
 }
 
 a {
@@ -29,9 +28,9 @@ a.no-underline {
 
 h1 {
   font-weight: normal;
-  font-size: 16px;
-  line-height: 18.5px;
-  margin: 64px 0 8px;
+  font-size: 1rem;
+  line-height: 1.125rem;
+  margin: 5rem 0 0.5rem;
 }
 
 p {
@@ -44,7 +43,7 @@ p {
 
 .graph {
   font-family: "Courier New", Courier, monospace;
-  line-height: 18px;
+  line-height: 1.125rem;
 }
 .graph .line {
   display: block;
@@ -55,39 +54,39 @@ p {
 }
 
 .space-left-1 {
-  margin-left: 20px;
+  margin-left: 1.25rem;
 }
 
 .space-left-2 {
-  margin-left: 40px;
+  margin-left: 2.5rem;
 }
 
 .space-left-3 {
-  margin-left: 60px;
+  margin-left: 3.75rem;
 }
 
 .space-top-1 {
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 .space-top-2 {
-  margin-top: 40px;
+  margin-top: 2.5rem;
 }
 
 .space-top-3 {
-  margin-top: 60px;
+  margin-top: 3.75rem;
 }
 
 .space-bottom-1 {
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .space-bottom-2 {
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
 }
 
 .space-bottom-3 {
-  margin-bottom: 60px;
+  margin-bottom: 3.75rem;
 }
 
 .center {
@@ -102,7 +101,7 @@ p {
 }
 
 .logo {
-  line-height: 21px;
+  line-height: 1.3rem;
 }
 
 .side-note {
@@ -113,27 +112,27 @@ p {
 
 .side-note-modal {
   color: #aaa;
-  font-size: 14px;
+  font-size: 0.875rem;
   border: 2px solid #aaa;
   position: absolute;
   z-index: 10;
-  padding: 6px 10px;
-  max-width: 240px;
+  padding: 0.375rem 0.625rem;
+  max-width: 15rem;
   background: black;
 }
 .side-note-modal .close {
   position: absolute;
-  right: 0px;
-  top: 0px;
-  font-size: 16px;
-  line-height: 14px;
+  right: 0;
+  top: 0;
+  font-size: 1rem;
+  line-height: 0.875;
   padding: 0px 2px 2px 2px;
   cursor: pointer;
 }
 
 .footnote {
   color: #aaa;
-  margin-top: 80px;
+  margin-top: 5rem;
 }
 .footnote a {
   color: #ddd;
