--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://app.monosketch.io/fonts/stylesheet.css");
 * {
   margin: 0;
   padding: 0;
@@ -42,10 +43,14 @@ section {
   font-style: italic;
   font-weight: 200; }
 
+.quote:before, .quote:after {
+  position: absolute;
+  font-family: "Times", "serif";
+  font-size: 8rem;
+  opacity: 0.3; }
+
 .quote:before {
-  content: '“';
-  font-size: 3rem; }
+  content: '“'; }
 
 .quote:after {
-  content: '”';
-  font-size: 3rem; }
+  content: '”'; }
