--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+@import url('https://app.monosketch.io/fonts/stylesheet.css');
+
 $font: 'Jetbrains Mono', 'Fira code', 'Courier New', Courier, monospace;
 $bg-stroke: #f0f0f0 1px;
 $bg-stroke-width: 2.3rem;
